Correções de erro na sincronização do threds, ajuste no gargalo de sincronização e adição de fila de envio para a postagem com enpoint de consulta.
